--- a/trequinhos/index.html
+++ b/trequinhos/index.html
@@ -10,6 +10,16 @@
 	<link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="contact-us.php">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MVMB18CQF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6MVMB18CQF');
+    </script>
+    <link rel="shortcut icon" href="images/logo.PNG">
     <title>Trequinhos e coisa e tal</title>
 </head>
 <body>
