Adicionando menu ilhabela

--- a/Monge/sobre.html
+++ b/Monge/sobre.html
@@ -15,18 +15,18 @@
         <div class="head">
             <ul class="cabeca">
                 <li>
-                    <img class="logo" src="../Monge/image/logo.jpg" alt="Logo">
+                    <img class="logo" src="/image/logo.jpg" alt="Logo">
                 </li>
                 <!--Hamburguer-->
                 <div class="mobile">
-                    <div class="botaoMenu" onclick="abrirOuFecharMenu()"> <img class="hamburguer" src="../Monge/image/hamburguer.png" alt=""> </div>
+                    <div class="botaoMenu" onclick="abrirOuFecharMenu()"> <img class="hamburguer" src="/image/hamburguer.png" alt=""> </div>
                     <nav>
                         <ul class="menuMobile">
                             <li><a href="index.html" onclick="fecharMenu()">Home</a></li>
                             <li><a href="sobre.html" onclick="fecharMenu()">Sobre</a></li>
                             <li><a href="#" onclick="fecharMenu()">Acomodações</a></li>
                             <li><a href="#" onclick="fecharMenu()">Serviços</a></li>
-                            <li><a href="#" onclick="fecharMenu()">Ilhabela</a></li>
+                            <li><a href="ilhabela.html" onclick="fecharMenu()">Ilhabela</a></li>
                             <li><a href="#" onclick="fecharMenu()">Imagens</a></li>
                             <li><a href="contato.html" onclick="fecharMenu()">Contato</a></li>
                             <li><a href="#" onclick="fecharMenu()">Reservas</a></li>
@@ -41,7 +41,7 @@
                             <li><a href="sobre.html">Sobre</a></li>
                             <li><a href="#">Acomodações</a></li>
                             <li><a href="#">Serviços</a></li>
-                            <li><a href="#">Ilhabela</a></li>
+                            <li><a href="ilhabela.html">Ilhabela</a></li>
                             <li><a href="#">Imagens</a></li>
                             <li><a href="contato.html">Contato</a></li>
                             <li><a href="#">Reservas</a></li>
@@ -51,7 +51,7 @@
             </ul>
             <div class="sobre">
                 <div class="img">
-                    <img src="../Monge/image/sobre1.jpg" alt="">
+                    <img src="/image/sobre1.jpg" alt="">
                 </div>
                 <div>
                     <p>
@@ -83,17 +83,17 @@
             <div class="end">
                 <div class="info">
                     <div class="icon">
-                        <img src="../Monge/image/phone.png" alt="">
+                        <img src="/image/phone.png" alt="">
                     </div>
                     <div class="text">
                         <span>Telefone</span>
                         <span>(12)99999-9999</span>
                     </div>
                     <div class="icon">
-                        <a href="#"><img src="../Monge/image/face.png" alt="Facebook"></a>    
+                        <a href="#"><img src="/image/face.png" alt="Facebook"></a>    
                     </div>
                     <div class="icon">
-                        <a href="#"><img src="../Monge/image/insta.png" alt="Instagram"></a>
+                        <a href="#"><img src="/image/insta.png" alt="Instagram"></a>
                     </div>
                 </div>
             </div>
@@ -104,10 +104,10 @@
         
     </section>
 
-    <a href="#"><img id="icon-whats" src="../Monge/image/whats.jpg" alt=""></a>
+    <a href="#"><img id="icon-whats" src="/image/whats.jpg" alt=""></a>
 
     <footer class="footer">
-        <p>Desenvolvido por <a href="#"><img src="../Monge/image/Wd.png" alt=""></a></p>
+        <p>Desenvolvido por <a href="#"><img src="/image/Wd.png" alt=""></a></p>
     </footer>
     
     <script src="js/script.js"></script>
