--- a/Monge/index.html
+++ b/Monge/index.html
@@ -15,12 +15,12 @@
         <div class="head">
             <ul class="cabeca">
                 <li>
-                    <img class="logo" src="../Monge/image/logo.jpg" alt="Logo">
+                    <img class="logo" src="/image/logo.jpg" alt="Logo">
                 </li>
                 <!--Hamburguer-->
                 <li>
                     <div class="mobile">
-                        <div class="botaoMenu" onclick="abrirOuFecharMenu()"> <img class="hamburguer" src="../Monge/image/hamburguer.png" alt=""> </div>
+                        <div class="botaoMenu" onclick="abrirOuFecharMenu()"> <img class="hamburguer" src="/image/hamburguer.png" alt=""> </div>
 
                         <nav>
                             <ul class="menuMobile">
@@ -28,7 +28,7 @@
                                 <li><a href="sobre.html" onclick="fecharMenu()">Sobre</a></li>
                                 <li><a href="#" onclick="fecharMenu()">Acomodações</a></li>
                                 <li><a href="#" onclick="fecharMenu()">Serviços</a></li>
-                                <li><a href="#" onclick="fecharMenu()">Ilhabela</a></li>
+                                <li><a href="ilhabela.html" onclick="fecharMenu()">Ilhabela</a></li>
                                 <li><a href="#" onclick="fecharMenu()">Imagens</a></li>
                                 <li><a href="contato.html" onclick="fecharMenu()">Contato</a></li>
                                 <li><a href="#" onclick="fecharMenu()">Reservas</a></li>
@@ -44,7 +44,7 @@
                             <li><a href="sobre.html">Sobre</a></li>
                             <li><a href="#">Acomodações</a></li>
                             <li><a href="#">Serviços</a></li>
-                            <li><a href="#">Ilhabela</a></li>
+                            <li><a href="ilhabela.html">Ilhabela</a></li>
                             <li><a href="#">Imagens</a></li>
                             <li><a href="contato.html">Contato</a></li>
                             <li><a href="#">Reservas</a></li>
@@ -60,17 +60,17 @@
             <div class="end">
                 <div class="info">
                     <div class="icon">
-                        <img src="../Monge/image/phone.png" alt="">
+                        <img src="/image/phone.png" alt="">
                     </div>
                     <div class="text">
                         <span>Telefone</span>
                         <span>(12)99999-9999</span>
                     </div>
                     <div class="icon">
-                        <a href="#"><img src="../Monge/image/face.png" alt="Facebook"></a>    
+                        <a href="#"><img src="/image/face.png" alt="Facebook"></a>    
                     </div>
                     <div class="icon">
-                        <a href="#"><img src="../Monge/image/insta.png" alt="Instagram"></a>
+                        <a href="#"><img src="/image/insta.png" alt="Instagram"></a>
                     </div>
                 </div>
             </div>
@@ -81,10 +81,10 @@
         
     </section>
 
-    <a href="#"><img id="icon-whats" src="../Monge/image/whats.jpg" alt=""></a>
+    <a href="#"><img id="icon-whats" src="/image/whats.jpg" alt=""></a>
 
     <footer class="footer">
-        <p>Desenvolvido por <a href="#"><img src="../Monge/image/Wd.png" alt=""></a></p>
+        <p>Desenvolvido por <a href="#"><img src="/image/Wd.png" alt=""></a></p>
     </footer>
     
     <script src="js/script.js"></script>
