--- a/Monge/ilhabela.html
+++ b/Monge/ilhabela.html
@@ -15,11 +15,11 @@
         <div class="head">
             <ul class="cabeca">
                 <li>
-                    <img class="logo" src="/image/logo.jpg" alt="Logo">
+                    <img class="logo" src="../Monge/image/logo.jpg" alt="Logo">
                 </li>
                 <!--Hamburguer-->
                 <div class="mobile">
-                    <div class="botaoMenu" onclick="abrirOuFecharMenu()"> <img class="hamburguer" src="/image/hamburguer.png" alt=""> </div>
+                    <div class="botaoMenu" onclick="abrirOuFecharMenu()"> <img class="hamburguer" src="../Monge/image/hamburguer.png" alt=""> </div>
 
                     <nav>
                         <ul class="menuMobile">
@@ -53,7 +53,7 @@
             <div class="ilha">
                 <div class="cidade">
                     <div class="figura">
-                        <img src="/image/mapa.jpg" alt="Mapa de Ilhabela">
+                        <img src="../Monge/image/mapa.jpg" alt="Mapa de Ilhabela">
                     </div>
                     <div class="text">
                         <h2>Ilhabela</h2>
@@ -61,14 +61,14 @@
                     </div>
                 </div>
                 <div class="praias">
-                    <div class="figura"><img src="/image/praia.jpg" alt="Praia"></div>
+                    <div class="figura"><img src="../Monge/image/praia.jpg" alt="Praia"></div>
                     <div class="text">
                         <h2>Praias</h2>      
                         <p>As praias de Ilhabela estão entre as melhores praias do Litoral Norte de São Paulo. Cercada por mar transparente e o intenso verde da Mata Atlântica, Ilhabela conta com mais de trinta faixas de areia acessíveis aos turistas que buscam dias de descanso da cidade grande. As praias mais urbanas de Ilhabela estão localizadas na costa oeste, ao longo da estrada que liga o Sul, o Centro e o Norte da ilha, e onde há mais infraestrutura,  restaurantes e serviços. Já as praias mais selvagens, ficam ao longo da costa leste, nos arredores do Parque Estadual de Ilhabela, e onde o acesso só é possível por via marítima, trilhas ou veículos com tração 4×4.</p>
                     </div>
                 </div>
                 <div class="cachoeiras">
-                    <div class="figura"><img src="/image/cachoeira.jpg" alt="Cachoeira"></div>
+                    <div class="figura"><img src="../Monge/image/cachoeira.jpg" alt="Cachoeira"></div>
                     <div class="text">
                         <h2>Cachoeiras</h2>
                         <p> Patrimônio Natural e Reserva da Biosfera pela UNESCO com 94% de Mata Atlântica preservada, não é se de espantar que Ilhabela tenha umas das paisagens naturais mais encantadoras do litoral, com praias paradisíacas, reservas verdes e muuuuitas cachoeiras.
@@ -94,17 +94,17 @@
             <div class="end">
                 <div class="info">
                     <div class="icon">
-                        <img src="./image/phone.png" alt="">
+                        <img src="../Monge/image/phone.png" alt="">
                     </div>
                     <div class="text">
                         <span>Telefone</span>
                         <span>(12)99999-9999</span>
                     </div>
                     <div class="icon">
-                        <a href="#"><img src="/image/face.png" alt="Facebook"></a>    
+                        <a href="#"><img src="../Monge/image/face.png" alt="Facebook"></a>    
                     </div>
                     <div class="icon">
-                        <a href="#"><img src="/image/insta.png" alt="Instagram"></a>
+                        <a href="#"><img src="../Monge/image/insta.png" alt="Instagram"></a>
                     </div>
                 </div>
             </div>
@@ -115,10 +115,10 @@
         
     </section>
 
-    <a href="#"><img id="icon-whats" src="/image/whats.jpg" alt=""></a>
+    <a href="#"><img id="icon-whats" src="../Monge/image/whats.jpg" alt=""></a>
 
     <footer class="footer">
-        <p>Desenvolvido por <a href="#"><img src="/image/Wd.png" alt=""></a></p>
+        <p>Desenvolvido por <a href="#"><img src="../Monge/image//Wd.png" alt=""></a></p>
     </footer>
     
 
