--- a/Monge/index.html
+++ b/Monge/index.html
@@ -29,9 +29,9 @@
                                 <li><a href="#" onclick="fecharMenu()">Acomodações</a></li>
                                 <li><a href="#" onclick="fecharMenu()">Serviços</a></li>
                                 <li><a href="ilhabela.html" onclick="fecharMenu()">Ilhabela</a></li>
-                                <li><a href="#" onclick="fecharMenu()">Imagens</a></li>
+                                <li><a href="imagens.html" onclick="fecharMenu()">Imagens</a></li>
                                 <li><a href="contato.html" onclick="fecharMenu()">Contato</a></li>
-                                <li><a href="#" onclick="fecharMenu()">Reservas</a></li>
+                                <li><a href="https://www.booking.com/hotel/br/casa-do-monge.pt-br.html" target="blank" onclick="fecharMenu()">Reservas</a></li>
                             </ul>
                         </nav> 
                     </div>
@@ -45,9 +45,9 @@
                             <li><a href="#">Acomodações</a></li>
                             <li><a href="#">Serviços</a></li>
                             <li><a href="ilhabela.html">Ilhabela</a></li>
-                            <li><a href="#">Imagens</a></li>
+                            <li><a href="imagens.html">Imagens</a></li>
                             <li><a href="contato.html">Contato</a></li>
-                            <li><a href="#">Reservas</a></li>
+                            <li><a href="https://www.booking.com/hotel/br/casa-do-monge.pt-br.html" target="blank">Reservas</a></li>
                         </ul>
                     </nav>
                 </li>
