--- a/Monge/imagens.html
+++ b/Monge/imagens.html
@@ -29,7 +29,7 @@
                                 <li><a href="#" onclick="fecharMenu()">Acomodações</a></li>
                                 <li><a href="#" onclick="fecharMenu()">Serviços</a></li>
                                 <li><a href="ilhabela.html" onclick="fecharMenu()">Ilhabela</a></li>
-                                <li><a href="#" onclick="fecharMenu()">Imagens</a></li>
+                                <li><a href="imagens.html" onclick="fecharMenu()">Imagens</a></li>
                                 <li><a href="contato.html" onclick="fecharMenu()">Contato</a></li>
                                 <li><a href="https://www.booking.com/hotel/br/casa-do-monge.pt-br.html" target="blank" onclick="fecharMenu()">Reservas</a></li>
                             </ul>
@@ -45,7 +45,7 @@
                             <li><a href="#">Acomodações</a></li>
                             <li><a href="#">Serviços</a></li>
                             <li><a href="ilhabela.html">Ilhabela</a></li>
-                            <li><a href="#">Imagens</a></li>
+                            <li><a href="imagens.html">Imagens</a></li>
                             <li><a href="contato.html">Contato</a></li>
                             <li><a href="https://www.booking.com/hotel/br/casa-do-monge.pt-br.html" target="blank">Reservas</a></li>
                         </ul>
