--- a/Monge/contato.html
+++ b/Monge/contato.html
@@ -23,10 +23,9 @@
 
                     <nav>
                         <ul class="menuMobile">
-                            <li><a href="index.html" onclick="fecharMenu()">Home</a></li>
+                            <li><a href="index.html" onclick="fecharMenu()">Início</a></li>
                             <li><a href="sobre.html" onclick="fecharMenu()">Sobre</a></li>
-                            <li><a href="#" onclick="fecharMenu()">Acomodações</a></li>
-                            <li><a href="#" onclick="fecharMenu()">Serviços</a></li>
+                            <li><a href="acomodacoes.html" onclick="fecharMenu()">Acomodações</a></li>                            
                             <li><a href="ilhabela.html" onclick="fecharMenu()">Ilhabela</a></li>
                             <li><a href="imagens.html" onclick="fecharMenu()">Imagens</a></li>
                             <li><a href="contato.html" onclick="fecharMenu()">Contato</a></li>
@@ -38,10 +37,9 @@
                 <li>
                     <nav>
                         <ul class="menu">
-                            <li><a href="index.html">Home</a> </li>
+                            <li><a href="index.html">Início</a> </li>
                             <li><a href="sobre.html">Sobre</a></li>
-                            <li><a href="#">Acomodações</a></li>
-                            <li><a href="#">Serviços</a></li>
+                            <li><a href="acomodacoes.html">Acomodações</a></li>                            
                             <li><a href="ilhabela.html">Ilhabela</a></li>
                             <li><a href="imagens.html">Imagens</a></li>
                             <li><a href="contato.html">Contato</a></li>
@@ -94,7 +92,7 @@
         </div>
         
     </section>
-
+    <a href="#"><img class="figmensagem" src="../Monge/image/desconto.png" alt=""></a>
     <a href="#"><img id="icon-whats" src="../Monge/image/whats.jpg" alt=""></a>
 
     <footer class="footer">
