--- a/Monge/imagens.html
+++ b/Monge/imagens.html
@@ -24,10 +24,9 @@
 
                         <nav>
                             <ul class="menuMobile">
-                                <li><a href="index.html" onclick="fecharMenu()">Home</a></li>
+                                <li><a href="index.html" onclick="fecharMenu()">Início</a></li>
                                 <li><a href="sobre.html" onclick="fecharMenu()">Sobre</a></li>
-                                <li><a href="#" onclick="fecharMenu()">Acomodações</a></li>
-                                <li><a href="#" onclick="fecharMenu()">Serviços</a></li>
+                                <li><a href="acomodacoes.html" onclick="fecharMenu()">Acomodações</a></li>                               
                                 <li><a href="ilhabela.html" onclick="fecharMenu()">Ilhabela</a></li>
                                 <li><a href="imagens.html" onclick="fecharMenu()">Imagens</a></li>
                                 <li><a href="contato.html" onclick="fecharMenu()">Contato</a></li>
@@ -40,10 +39,9 @@
                 <li>
                     <nav>
                         <ul class="menu">
-                            <li><a href="index.html">Home</a> </li>
+                            <li><a href="index.html">Início</a> </li>
                             <li><a href="sobre.html">Sobre</a></li>
-                            <li><a href="#">Acomodações</a></li>
-                            <li><a href="#">Serviços</a></li>
+                            <li><a href="acomodacoes.html">Acomodações</a></li>                            
                             <li><a href="ilhabela.html">Ilhabela</a></li>
                             <li><a href="imagens.html">Imagens</a></li>
                             <li><a href="contato.html">Contato</a></li>
@@ -53,18 +51,22 @@
                 </li>
             </ul>
             <div class="galery">
-                <div><img src="../Monge/image/Galeria/1.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/2.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/3.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/4.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/5.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/6.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/7.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/8.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/9.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/10.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/11.jpg" alt=""></div>
-                <div><img src="../Monge/image/Galeria/12.jpg" alt=""></div>
+                <div class="container">
+                    <div><img src="../Monge/image/Galeria/1.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/2.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/3.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/4.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/5.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/6.jpg" alt=""></div>
+                </div>
+                <div class="container">
+                    <div><img src="../Monge/image/Galeria/7.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/8.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/9.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/10.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/11.jpg" alt=""></div>
+                    <div><img src="../Monge/image/Galeria/12.jpg" alt=""></div>
+                </div>
             </div>
         </div>
     </head>
@@ -94,7 +96,7 @@
         </div>
         
     </section>
-
+    <a href="#"><img class="figmensagem" src="../Monge/image/desconto.png" alt=""></a>
     <a href="#"><img id="icon-whats" src="../Monge/image/whats.jpg" alt=""></a>
 
     <footer class="footer">
