--- a/Monge/index.html
+++ b/Monge/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">
     <title>Casa do Monge</title>
 </head>
 <body>
@@ -87,7 +89,7 @@
         </div>
         
     </section>
-    <a href="#"><img class="figmensagem" src="../Monge/image/desconto.png" alt=""></a>
+    <a href="#"><img src="../Monge/image/desconto.png" alt="" class="figmensagem"> </a>
     <a href="#"><img id="icon-whats" src="../Monge/image/whats.jpg" alt=""></a>
 
     <footer class="footer">
