--- a/Monge/imagens.html
+++ b/Monge/imagens.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/corpo.css">
     <link rel="stylesheet" href="css/stile.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Casa do Monge</title>
 </head>
 <body>
@@ -74,6 +76,14 @@
             <div class="end">
                 <div class="info">
                     <div class="icon">
+                        <img src="../Monge/image/placeholder.png" alt="">
+                    </div>
+                    <div class="text">
+                        <span>Endereço</span>
+                        <span>Rua: José Carlos Siqueira, 733 </span>
+                        <span>Ilhabela/SP</span>
+                    </div>
+                    <div class="icon">
                         <img src="../Monge/image/phone.png" alt="">
                     </div>
                     <div class="text">
@@ -81,11 +91,8 @@
                         <span>(12)99999-9999</span>
                     </div>
                     <div class="icon">
-                        <a href="#"><img src="../Monge/image/face.png" alt="Facebook"></a>    
-                    </div>
-                    <div class="icon">
-                        <a href="#"><img src="../Monge/image/insta.png" alt="Instagram"></a>
-                    </div>
+                        <a href="https://www.facebook.com/Casa-Do-Monge-Ilhabela-368844543285024" target="_blank"><img src="../Monge/image/face.png" alt="Facebook"></a>    
+                    </div>                    
                 </div>
             </div>
             <div class="map">
@@ -94,11 +101,11 @@
         </div>
         
     </section>
-    <a href="#"><img class="figmensagem" src="../Monge/image/desconto.png" alt=""></a>
-    <a href="#"><img id="icon-whats" src="../Monge/image/whats.jpg" alt=""></a>
+    <!--<a href="#"><img src="../Monge/image/desconto.png" alt="" class="figmensagem"> </a>-->
+    <a href="https://api.whatsapp.com/send?phone=5512981581603&text=Ol%C3%A1,%20tudo%20bem?%20Gostaria%20de%20utilizar%20o%20cupom%20CDS021" target="_blank""><img id="icon-whats" src="../Monge/image/whats.png" alt=""></a>
 
     <footer class="footer">
-        <p>Desenvolvido por <a href="#"><img src="../Monge/image/Wd.png" alt=""></a></p>
+        <p>Desenvolvido por <a href="https://www.instagram.com/webdeveloper.paulorpd/" target="_blank"><img src="../Monge/image/Wd.png" alt=""></a></p>
     </footer>
     
     <script src="js/script.js"></script>
