Adicionando cursos e skilss

--- a/meulinktree/index.html
+++ b/meulinktree/index.html
@@ -34,20 +34,81 @@
         </li>
     </ul>
 
-    <ul class="links-list">
-        <li>
-            <a href="">
-                Desenvolvimento Web Fullstack
-                <span> Curso de Programação web para Iniciantes (do zero).</span>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                A Fábrica de Aplicativos - React Native
-                <span> Curso de Programação web para Iniciantes (do zero).</span>
-            </a>
-        </li>
-    </ul>
+    <div class="skilld">
+        <h2>SKILSS</h2>
+        <ul class="skills">
+            <li>
+                <h4>HTML</h4>
+                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919827.svg?token=exp=1620484045~hmac=5b3dbc52fb2c339716865db22ffab9ce" alt="">
+            </li>
+            <li>
+                <h4>CSS</h4>
+                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919826.svg?token=exp=1620484199~hmac=5593c328b0e80e7c06ef4cece3bbb551" alt="">
+            </li>
+            <li>
+                <h4>SASS</h4>
+                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919831.svg?token=exp=1620484671~hmac=6d9b8d37cea3b03696a2258dc73085ec" alt="">
+            </li>
+            <li>
+                <h4>Javascript</h4>
+                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919828.svg?token=exp=1620484812~hmac=ac9e03c5f0c6e6312f52e6f8c5f65448" alt="">
+            </li>
+            <li>
+                <h4>Git</h4>
+                <img src="https://www.flaticon.com/premium-icon/icons/svg/1240/1240970.svg" alt="">
+            </li>
+            <li>
+                <h4>MongoDB</h4>
+                <img src="https://toppng.com/uploads/preview/9kib-354x415-unnamed-mongodb-logo-sv-11562860723mgempnmrq3.png" alt="">
+            </li>
+            <li>
+                <h4>Node.js</h4>
+                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919825.svg?token=exp=1620485569~hmac=215a33550250e1dde524eb726f1f2749" alt="">
+            </li>
+            <li>
+                <h4>React.js</h4>
+                <img src="https://w7.pngwing.com/pngs/18/497/png-transparent-black-and-blue-atom-icon-screenshot-react-javascript-responsive-web-design-github-angularjs-github-logo-electric-blue-signage.png" alt="">
+            </li>
+        </ul>
+    </div>
+
+
+    <div class="cursos">
+        <h2>Cursos</h2>
+        <ul class="links-list">
+            <li>
+                <a href="">
+                    Desenvolvimento Web Fullstack
+                    <span> Curso de Programação web para Iniciantes (do zero).</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    Lógica de programação essencial
+                    <span> Digital Innovation One</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    Fundamentos de arquitetura de sistemas
+                    <span> Digital Innovation One</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    Arquitetura de Sistemas Avançado
+                    <span> Digital Innovation One</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    Desenvolvimento básico em Java
+                    <span> Digital Innovation One</span>
+                </a>
+            </li>
+            
+        </ul>
+    </div>
 
 </body>
 </html>
