--- a/meulinktree/index.html
+++ b/meulinktree/index.html
@@ -39,7 +39,7 @@
         <ul class="skills">
             <li>
                 <h4>HTML</h4>
-                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919827.svg?token=exp=1620484045~hmac=5b3dbc52fb2c339716865db22ffab9ce" alt="">
+                <img src="https://www.iconninja.com/files/840/443/663/logo-icon.png" alt="">
             </li>
             <li>
                 <h4>CSS</h4>
