--- a/meulinktree/index.html
+++ b/meulinktree/index.html
@@ -39,19 +39,19 @@
         <ul class="skills">
             <li>
                 <h4>HTML</h4>
-                <img src="https://www.iconninja.com/files/840/443/663/logo-icon.png" alt="">
+                <img src="https://p7.hiclipart.com/preview/500/197/203/5bbc13124a128.jpg" alt="">
             </li>
             <li>
                 <h4>CSS</h4>
-                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919826.svg?token=exp=1620484199~hmac=5593c328b0e80e7c06ef4cece3bbb551" alt="">
+                <img src="https://img.favpng.com/9/15/14/css3-cascading-style-sheets-logo-html-png-favpng-zNceG1C3PUpjKThDUF68AN96N.jpg" alt="">
             </li>
             <li>
                 <h4>SASS</h4>
-                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919831.svg?token=exp=1620484671~hmac=6d9b8d37cea3b03696a2258dc73085ec" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Sass_Logo_Color.svg/1200px-Sass_Logo_Color.svg.png" alt="">
             </li>
             <li>
                 <h4>Javascript</h4>
-                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919828.svg?token=exp=1620484812~hmac=ac9e03c5f0c6e6312f52e6f8c5f65448" alt="">
+                <img src="https://w1.pngwing.com/pngs/951/574/png-transparent-react-logo-javascript-redux-vuejs-angular-angularjs-expressjs-front-and-back-ends.png" alt="">
             </li>
             <li>
                 <h4>Git</h4>
@@ -63,7 +63,7 @@
             </li>
             <li>
                 <h4>Node.js</h4>
-                <img src="https://www.flaticon.com/svg/vstatic/svg/919/919825.svg?token=exp=1620485569~hmac=215a33550250e1dde524eb726f1f2749" alt="">
+                <img src="https://mpng.subpng.com/20180821/zwc/kisspng-node-js-javascript-express-js-portable-network-gra-mixin-software-5b7c72478c6ba0.9607634315348823755752.jpg" alt="">
             </li>
             <li>
                 <h4>React.js</h4>
