--- a/meulinktree/index.html
+++ b/meulinktree/index.html
@@ -21,16 +21,16 @@
 
     <ul class="social">
         <li>
-            <a href="https://www.instagram.com/webdeveloper.paulorpd/"> <img src="img/insta.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/webdeveloper.paulorpd/" target="blank"> <img src="img/insta.svg" alt="Instagram"></a>
         </li>
         <li>
-            <a href="https://www.linkedin.com/in/paulo-ricardo-pereira-domingues-369020190/"> <img src="img/linkedin.svg" alt="Linkedin"></a>
+            <a href="https://www.linkedin.com/in/paulo-ricardo-pereira-domingues-369020190/" target="blank"> <img src="img/linkedin.svg" alt="Linkedin"></a>
         </li>
         <li>
-            <a href="https://github.com/Paulo-cds"> <img src="img/github.svg" alt="github"></a>
+            <a href="https://github.com/Paulo-cds" target="blank"> <img src="img/github.svg" alt="github"></a>
         </li>
         <li>
-            <a href="https://wa.me/5512991643783"> <img src="img/whatsapp.png" alt="whatsapp"></a>
+            <a href="https://wa.me/5512991643783" target="blank"> <img src="img/whatsapp.png" alt="whatsapp"></a>
         </li>
     </ul>
 
