--- a/Meu link tree/index.html
+++ b/Meu link tree/index.html
@@ -14,40 +14,101 @@
 <body>
     
     <div class="profile">
-        <img src="img/Paulo.jpg" alt="Thiago" class="avatar">
+        <img src="img/Paulo.jpg" alt="" class="avatar">
         <h1>Paulo R. P. Domingues</h1>
         <h2>Web Developer</h2>
     </div>
 
     <ul class="social">
         <li>
-            <a href="https://www.instagram.com/webdeveloper.paulorpd/"> <img src="img/insta.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/webdeveloper.paulorpd/" target="blank"> <img src="img/insta.svg" alt="Instagram"></a>
         </li>
         <li>
-            <a href="https://www.linkedin.com/in/paulo-ricardo-pereira-domingues-369020190/"> <img src="img/linkedin.svg" alt="Linkedin"></a>
+            <a href="https://www.linkedin.com/in/paulo-ricardo-pereira-domingues-369020190/" target="blank"> <img src="img/linkedin.svg" alt="Linkedin"></a>
         </li>
         <li>
-            <a href="https://github.com/Paulo-cds"> <img src="img/github.svg" alt="github"></a>
+            <a href="https://github.com/Paulo-cds" target="blank"> <img src="img/github.svg" alt="github"></a>
         </li>
         <li>
-            <a href="https://wa.me/5512991643783"> <img src="img/whatsapp.png" alt="whatsapp"></a>
+            <a href="https://wa.me/5512991643783" target="blank"> <img src="img/whatsapp.png" alt="whatsapp"></a>
         </li>
     </ul>
 
-    <ul class="links-list">
-        <li>
-            <a href="">
-                Desenvolvimento Web Fullstack
-                <span> Curso de Programação web para Iniciantes (do zero).</span>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                A Fábrica de Aplicativos - React Native
-                <span> Curso de Programação web para Iniciantes (do zero).</span>
-            </a>
-        </li>
-    </ul>
+    <div class="skilld">
+        <h2>SKILSS</h2>
+        <ul class="skills">
+            <li>
+                <h4>HTML</h4>
+                <img src="https://p7.hiclipart.com/preview/500/197/203/5bbc13124a128.jpg" alt="">
+            </li>
+            <li>
+                <h4>CSS</h4>
+                <img src="https://img.favpng.com/9/15/14/css3-cascading-style-sheets-logo-html-png-favpng-zNceG1C3PUpjKThDUF68AN96N.jpg" alt="">
+            </li>
+            <li>
+                <h4>SASS</h4>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Sass_Logo_Color.svg/1200px-Sass_Logo_Color.svg.png" alt="">
+            </li>
+            <li>
+                <h4>Javascript</h4>
+                <img src="https://w1.pngwing.com/pngs/951/574/png-transparent-react-logo-javascript-redux-vuejs-angular-angularjs-expressjs-front-and-back-ends.png" alt="">
+            </li>
+            <li>
+                <h4>Git</h4>
+                <img src="https://www.flaticon.com/premium-icon/icons/svg/1240/1240970.svg" alt="">
+            </li>
+            <li>
+                <h4>MongoDB</h4>
+                <img src="https://toppng.com/uploads/preview/9kib-354x415-unnamed-mongodb-logo-sv-11562860723mgempnmrq3.png" alt="">
+            </li>
+            <li>
+                <h4>Node.js</h4>
+                <img src="https://mpng.subpng.com/20180821/zwc/kisspng-node-js-javascript-express-js-portable-network-gra-mixin-software-5b7c72478c6ba0.9607634315348823755752.jpg" alt="">
+            </li>
+            <li>
+                <h4>React.js</h4>
+                <img src="https://w7.pngwing.com/pngs/18/497/png-transparent-black-and-blue-atom-icon-screenshot-react-javascript-responsive-web-design-github-angularjs-github-logo-electric-blue-signage.png" alt="">
+            </li>
+        </ul>
+    </div>
+
+
+    <div class="cursos">
+        <h2>Cursos</h2>
+        <ul class="links-list">
+            <li>
+                <a href="">
+                    Desenvolvimento Web Fullstack
+                    <span> Curso de Programação web para Iniciantes (do zero).</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    Lógica de programação essencial
+                    <span> Digital Innovation One</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    Fundamentos de arquitetura de sistemas
+                    <span> Digital Innovation One</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    Arquitetura de Sistemas Avançado
+                    <span> Digital Innovation One</span>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    Desenvolvimento básico em Java
+                    <span> Digital Innovation One</span>
+                </a>
+            </li>
+            
+        </ul>
+    </div>
 
 </body>
 </html>
