Adicionando link para loja shopee

--- a/Link3Trequinhos/index.html
+++ b/Link3Trequinhos/index.html
@@ -44,6 +44,13 @@
                 <span> Entre em contato</span>
             </a>
         </li>
+        <li>
+            <a href="https://shopee.com.br/trequinhosecoisaetal?smtt=0.0.9" target="_blank">
+                <img class="whats" src="https://i.pinimg.com/originals/5e/05/87/5e0587f2e5326c27abde5b089e8bd8fb.png" alt="loja shopee">
+                <span>Loja no Shopee</span>
+            </a>
+        </li>
+
 
         <p class="conheca">Conheça nossos cursos de artesanato:</p>
 
