Adiciona curso resina

--- a/Link3Trequinhos/index.html
+++ b/Link3Trequinhos/index.html
@@ -37,7 +37,7 @@
                 <span> Acesse nosso site</span>
                 <span> e conheça nossa linha de produtos</span>
             </a>
-        </li>
+        </li>        
         <li>
             <a href="https://bit.ly/3oJJjIE" target="_blank">
                 <img class="whats" src="img/whatsapp.png" alt="Whatsapp">
@@ -51,8 +51,14 @@
             </a>
         </li>
 
-
         <p class="conheca">Conheça nossos cursos de artesanato:</p>
+
+        <li>
+            <a href="bit.ly/ResinMaster" target="_blank">
+                <img src="img/curso_resina.jpg" alt="Curso Resina">
+                <span> Resina Master - Do primeiro passo até a Venda da peça!</span>
+            </a>
+        </li>
 
         <li>
             <a href="http://bit.ly/macramedo0" target="_blank">
@@ -88,6 +94,12 @@
             <a href="http://bit.ly/desvcroche" target="_blank">
                 <img src="img/desvendcroche.png" alt="Desvendando o croche">
                 <span> Desvendando o crochê</span>              
+            </a>
+        </li>
+        <li>
+            <a href="http://bit.ly/cosmetart" target="_blank">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQM1zs633IRUZDx5DKavg7Lap38EcOf_MO3krZmB93vwWeVjolBLuM9LUgb0ohQ1Y-byLMhMxyaEqk&usqp=CAU" alt="Artesanato life">
+                <span> COMECE AGORA MESMO A FAZER COSMÉTICOS ARTESANAIS</span>              
             </a>
         </li>
     </ul>
